Bug 249969 - [JSC] Store JSWebAssemblyInstance in WasmToJS stub instead of JSWebAssemblyModule
Summary: [JSC] Store JSWebAssemblyInstance in WasmToJS stub instead of JSWebAssemblyMo...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-31 05:37 PST by Yusuke Suzuki
Modified: 2023-01-01 20:47 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2022-12-31 05:37:22 PST
...
Comment 1 Radar WebKit Bug Importer 2022-12-31 05:38:03 PST
<rdar://problem/103789934>
Comment 2 Yusuke Suzuki 2022-12-31 06:54:08 PST
Pull request: https://github.com/WebKit/WebKit/pull/8112
Comment 3 EWS 2023-01-01 20:47:21 PST
Committed 258375@main (11eab47bbd63): <https://commits.webkit.org/258375@main>

Reviewed commits have been landed. Closing PR #8112 and removing active labels.