[JSC] Store JSWebAssemblyInstance in WasmToJS stub instead of JSWebAssemblyModule https://bugs.webkit.org/show_bug.cgi?id=249969 rdar://103789934

Reviewed by Mark Lam.

Simplify code generation by storing JSWebAssemblyInstance instead of JSWebAssemblyModule.
We also clean up OptimizingCallLinkInfo allocation for WasmToJS stubs.

* Source/JavaScriptCore/bytecode/Repatch.cpp:
(JSC::webAssemblyOwner):
* Source/JavaScriptCore/interpreter/CallFrame.cpp:
(JSC::CallFrame::isAnyWasmCallee const):
* Source/JavaScriptCore/interpreter/StackVisitor.cpp:
(JSC::StackVisitor::Frame::calleeSaveRegistersForUnwinding):
* Source/JavaScriptCore/runtime/JSCast.h:
* Source/JavaScriptCore/runtime/JSCellInlines.h:
(JSC::isWebAssemblyInstance):
(JSC::isWebAssemblyModule): Deleted.
* Source/JavaScriptCore/runtime/JSType.cpp:
(WTF::printInternal):
* Source/JavaScriptCore/runtime/JSType.h:
* Source/JavaScriptCore/wasm/js/JSWebAssemblyInstance.cpp:
(JSC::JSWebAssemblyInstance::createStructure):
* Source/JavaScriptCore/wasm/js/JSWebAssemblyModule.cpp:
(JSC::JSWebAssemblyModule::clearJSCallICs):
(JSC::JSWebAssemblyModule::finalizeUnconditionally):
(JSC::JSWebAssemblyModule::generateWasmToJSStubs):
* Source/JavaScriptCore/wasm/js/JSWebAssemblyModule.h:
* Source/JavaScriptCore/wasm/js/WasmToJS.cpp:
(JSC::Wasm::handleBadImportTypeUse):
(JSC::Wasm::wasmToJS):
* Source/JavaScriptCore/wasm/js/WasmToJS.h:

Canonical link: https://commits.webkit.org/258375@main